--- a/css/main.scss
+++ b/css/main.scss
@@ -1557,7 +1557,6 @@ $blue: #222663;
 		box-shadow: 0 0 24px rgba(0, 0, 0, 0.11);
 		.swiper-wrapper{
 			width: 100%;
-			height: 100%;
 			position: relative;
 			z-index: 1;
 			display: flex;
@@ -1569,7 +1568,6 @@ $blue: #222663;
 				justify-content: space-between;
 				flex-shrink: 0;
 				width: 100%;
-				height: 100%;
 				position: relative;
 				background-color: $blue;
 				background-position: center;
@@ -2038,6 +2036,29 @@ $blue: #222663;
 				margin-top: -30px;
 			}
 
+		}
+		&_img{
+			position: relative;
+			span{
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translateY(-50%) translateX(-50%);
+				font-size: 2.3rem;
+				font-family: "SegoeUIBlack";
+				text-align: center;
+				color: $blue;
+				line-height: 1;
+				small{
+					margin-left: -5px;
+				}
+				b{
+					display: block;
+					font-family: "SegoeUI-Bold";
+					color: $blue;
+					font-size: 1.2rem;
+				}
+			}
 		}
 	}
 	&__stock{
