--- a/css/main.scss
+++ b/css/main.scss
@@ -1450,6 +1450,7 @@ $blue: #222663;
 			font-size: .88em;
 			padding: 0 10px;
 			color: #292929;
+			margin-bottom: auto;
 		}
 		.cesh{
 			position: relative;
@@ -1766,7 +1767,6 @@ $blue: #222663;
 			}
 			._btn{
 				padding-left: 26px;
-				height: 100%;
 				font-size: .77em;
 				color: #fff;
 				transition: $t;
@@ -2082,6 +2082,9 @@ $blue: #222663;
 			font-family: "SegoeUI-Bold";
 			font-size: 1em;
 			color: #b7b7b7;
+			line-height: 1;
+			margin-bottom: -5px;
+			margin-top: 5px;
 			&:before{
 				content: '';
 				width: 100%;
@@ -2093,10 +2096,11 @@ $blue: #222663;
 			}
 		}
 		h3{
-			margin-bottom: 8px;
+			margin-bottom: 2px;
+			margin-top: 5px;
 			font-family: "SegoeUIBlack";
 			font-size: 1.875rem;
-			line-height: .6;
+			line-height: 1;
 			color: #232323;
 		}
 		p{
@@ -2540,6 +2544,7 @@ $blue: #222663;
 	}
 	.card{
 		margin-top: 0;
+		flex-grow: 2;
 		&__body{
 			margin: 5px 0;
 		}
