--- a/css/main.scss
+++ b/css/main.scss
@@ -583,6 +583,9 @@ $blue: #222663;
 		&:last-of-type{
 			flex-grow: 3;
 		}
+		>div{
+			flex-grow: 2;
+		}
 	}
 	&__answer{
 		color: rgba(0, 0, 0, 0.4);
@@ -2191,6 +2194,7 @@ $blue: #222663;
 	&__left{
 		margin-right: 15px;
 		max-width: 690px;
+		flex-grow: 2;
 		.tab{
 			@extend .f_st_st;
 			&_item{
@@ -2899,6 +2903,74 @@ input,textarea{
 	&:focus{
 		@include placeholder{
 			opacity: 0;
+		}
+	}
+}
+
+.comment-respond{
+	padding-top: 30px;
+	padding-bottom: 30px;
+	text-align: center;
+	font-size: 1rem;
+	font-family: 'SegoeUI';
+	text-align: left;
+	>a{
+		color: #232323;
+		display: inline-block;
+		border-bottom: 1px solid  $yellow;
+		font-family: 'SegoeUI-Semibold';
+	}
+	>small{
+		margin-left: 25px;
+		a{
+			color: red;
+			font-size: .8rem;
+			font-family: 'SegoeUI-Semibold';
+			margin-left: auto;
+		}
+	}
+	.must-log-in{
+		font-size: 1rem;
+		font-family: 'SegoeUI-Semibold';
+		margin-bottom: 15px;
+	}
+	form{
+		margin-top: 20px;
+		text-align: center;
+	}
+	.form-comment{
+		width: 100%;
+		border: none;
+		border: 2px solid #f6f6f6;
+		padding: 15px 25px;
+		font-size: 1rem;
+		font-weight: 700;
+		min-height: 150px;
+		margin-bottom: 10px;
+		transition: .3s;
+		&:focus{
+			border-color: $yellow;
+		}
+	}
+	#submit.button-comment{
+		color: $yellow;
+		font-size: 0.9rem;
+		text-transform: uppercase;
+		border: 2px solid  $yellow;
+		padding: 9px 35px;
+		border-radius: 50px;
+		cursor: pointer;
+		font-family: 'SegoeUI-Semibold';
+	}
+	.ulogin_block{
+		font-size: 1rem;
+		font-weight: 400;
+		margin-top: 10px;
+		display: flex;
+		align-items: center;
+		.ulogin_label{
+			margin-top: -10px;
+			margin-right: 25px;
 		}
 	}
 }
